fixed IE overflowing paragraphs

--- a/src/mrs/static/sass/landing.sass
+++ b/src/mrs/static/sass/landing.sass
@@ -10,6 +10,9 @@ body
   align-items: center
   color: white
 
+  p
+    width: 100%
+
 #background-img--wrapper
   height: 100vh
   position: absolute
@@ -197,6 +200,7 @@ section
   color: rgba(0, 0, 0, 0.6)
   font-style: italic
   font-size: 0.7rem
+  width: 100%
 
 #s4 p
   text-align: center
@@ -232,6 +236,7 @@ section
 
 .FAQ--wrapper
   text-align: center
+  width: 100%
 
 .question--wrapper
   margin: 2rem 0
